--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <img src="img/logo.png" alt="logo png" style="margin: 15px;">
     <h1>Introducción a Git</h1>
     <p>Un sistema hecho con amor y mucho código</p>
+
     
 </body>
 </html>
